<resources>
    <string name="app_name">Design Navigation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="vase">Vase</string>
    <string name="marble_flower_vase">Marble Flower Vase</string>
    <string name="_4_7">4.7</string>
    <string name="_8_563_sold">8.563 sold</string>
    <string name="_85_00">$85.00</string>
    <string name="_7_376_reviews">(7.376 reviews)</string>
    <string name="description">Description</string>
    <string name="lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry">Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="color">Color</string>
    <string name="quantity">Quantity</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="total_price">Total price</string>
    <string name="_170_00">$170.00</string>
    <string name="add_to_card">Add to Card</string>
</resources>