<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    tools:context=".fragment.ItemInfoFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgBackArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:elevation="1dp"
        android:src="@drawable/ic_back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

<!--    <FrameLayout-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="330dp"-->
<!--        android:orientation="vertical"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent">-->

<!--        <androidx.viewpager2.widget.ViewPager2-->
<!--            android:id="@+id/viewPager"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            tools:context=".ui.screens.intro.IntroViewPagerFragment" />-->

<!--        <com.google.android.material.tabs.TabLayout-->
<!--            android:id="@+id/tabLayoutCircle"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="bottom"-->
<!--            android:background="@color/main_bg"-->
<!--            app:tabBackground="@drawable/tab_pager_selector"-->
<!--            app:tabGravity="center"-->
<!--            app:tabIndicatorHeight="0dp" />-->
<!--    </FrameLayout>-->

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgMainPhoto"
        android:layout_width="0dp"
        android:layout_height="330dp"
        android:elevation="0dp"
        android:scaleType="centerInside"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgMainPhoto">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/marble_flower_vase"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgIcHeart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_heart"
            app:layout_constraintBottom_toBottomOf="@id/tvTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvTitle" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/recyclerview_corner"
            android:padding="5dp"
            android:text="@string/_8_563_sold"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_star"
            app:layout_constraintBottom_toBottomOf="@id/tvSold"
            app:layout_constraintStart_toEndOf="@id/tvSold"
            app:layout_constraintTop_toTopOf="@id/tvSold" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/_4_7"
            android:textColor="@color/sub_text"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/tvSold"
            app:layout_constraintStart_toEndOf="@id/imgRate"
            app:layout_constraintTop_toTopOf="@id/tvSold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvReviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/_7_376_reviews"
            android:textColor="@color/sub_text"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/tvSold"
            app:layout_constraintStart_toEndOf="@id/tvRate"
            app:layout_constraintTop_toTopOf="@id/tvSold" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgTopLine"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:src="@color/sub_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDescriptionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/description"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgTopLine" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry"
            android:textColor="@color/sub_text"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDescriptionTitle" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/color"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDesc" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcCircle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvColor"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgFirstColor"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:visibility="invisible"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvColor" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/quantity"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgFirstColor" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llcCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:background="@drawable/quantity_corner"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="@id/tvQuantity"
            app:layout_constraintStart_toEndOf="@id/tvQuantity"
            app:layout_constraintTop_toTopOf="@id/tvQuantity">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvMinusCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/minus"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="1"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPlusCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/plus"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgBottomLine"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:src="@color/sub_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/llcCount" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTotalPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/total_price"
            android:textColor="@color/sub_text"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgBottomLine" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_170_00"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTotalPrice" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAddToCard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/btn_corner"
            android:drawableStart="@drawable/ic_shopping_bag"
            android:paddingStart="60dp"
            android:paddingEnd="40dp"
            android:text="@string/add_to_card"
            android:textAlignment="center"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="@id/tvPrice"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvPrice"
            app:layout_constraintTop_toTopOf="@id/tvTotalPrice" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>